--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <a target='_blank' href="https://www.cnn.com"><li>CNN</li></a>
                 <a target='_blank' href="https://www.tyt.com"><li>TYT</li></a>
                 <a target='_blank' href="https://www.msnbc.com"><li>MSNBC</li></a>
-                <a target='_blank' href="https://www.https://pnewstoday.com"><li>PHILIPINE NEWS</li></a>
+                <a target='_blank' href="https://pnewstoday.com/"><li>PHILIPINE NEWS</li></a>
                 <a target='_blank' href="https://www.univision.com"><li>UNIVISION</li></a>
                 <a target='_blank' href="https://www.youtube.com/user/briantylercohen?app=desktop"><li>BRIAN TYLER COHEN</li></a>
                 <a target='_blank' href="https://www.foxnews.com"><li>FAKE NEWS</li></a>
@@ -66,7 +66,7 @@
 
      <div id="middle">
          <div id="middleImg">
-             <img src="/images/news.jpg"/>
+             <img src="./images/news.png"/>
          </div>
         <div id="title" class="middleTitle">
             <ul>
